--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1298,8 +1298,6 @@
     <string name="start_date_not_entered_message">You must select the Start Date</string>
     <string name="end_date_not_entered_message">You must select the End Date</string>
 
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
 
     <string-array name="graphs_time_period_options">
         <item>This year</item>
@@ -1640,7 +1638,7 @@
     <string name="default_notification_channel_title">CROP MANAGER</string>
 
     <string name="label_preview_invoice">Preview Invoice</string>
-    <string name="infested_card">Infested :</string>
+    <string name="infested_card">Infested </string>
     <string name="no">No</string>
 
     <string name="purchase_order_status_billed">BILLED</string>
