--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1663,6 +1663,9 @@
     <string name="add_money">Add Money</string>
     <string name="add_funds">Add Funds</string>
     <string name="authenticate">Authenticate</string>
+    <string name="taxes_not_entered_message">You must enter Taxes</string>
+    <string name="selling_price_not_entered_message">You must enter Selling Price</string>
+    <string name="cropping_year_not_entered">Cropping Year has not been entered</string>
 
 
     <string-array name="dateFormatsArray">
