--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1071,7 +1071,7 @@
     <string name="unit_price_not_entered_message">You must enter the Unit Price</string>
     <string name="customer_supplier_not_entered_message">You must enter the Customer / Supplier</string>
     <string name="personnel">Personnel</string>
-    <string name="status">Status</string>
+    <string name="syncStatus">Status</string>
     <string name="recurrence">Recurrence</string>
     <string name="reminders">Reminders</string>
     <string name="description_not_entered_message">You must enter Description</string>
@@ -1201,7 +1201,7 @@
     <string name="title_activity_crop_nutrients_calculator_entry">Nutrients Calculator</string>
     <string name="estimated_yield_not_entered">Estimated yield not entered</string>
     <string name="title_activity_crop_nutrients_calculator_results">Nutrients Removed</string>
-    <string name="field_status_is_not_selected">The field status is not selected</string>
+    <string name="field_status_is_not_selected">The field syncStatus is not selected</string>
     <string name="field_type_not_selected">The field type is not selected</string>
     <string name="seed_type_not_selected">The Seed Type has not been selected</string>
     <string name="title_activity_crop_pdfview">CropPDFViewActivity</string>
