--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -953,7 +953,7 @@
     <string name="spray_name_not_entered">Spray Name has not been entered</string>
     <string name="title_activity_crop_spraying_list">Spraying </string>
     <string name="title_activity_crop_fertilizer_application_list">
-        Fertilizer Application 
+        Fertilizer Application
     </string>
     <string name="application_method_not_entered">Application Method not selected</string>
     <string name="fertilizer_form_not_selected">Fertilizer Form not selected</string>
@@ -1677,7 +1677,15 @@
     <string name="label_livestockrecords">Livestock Records</string>
     <string name="label_store">Store</string>
     <string name="label_financial_records">Financial Records</string>
+    <string name="label_add_financial_records">Add Financial Records</string>
+    <string name="label_livestock">Livestock</string>
+    <string name="label_ask_agronomist">Ask Agronomist</string>
     <string name="title_farm_records">Farm Records</string>
+    <string name="title_agronomy">Agronomy</string>
+    <string name="label_add_new">Add New</string>
+    <string name="label_add_crop">Add Crops</string>
+    <string name="title_crop_records">Crop Records</string>
+    <string name="label_production_reports">Production Reports</string>
 
 
     <string-array name="dateFormatsArray">
