--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1771,5 +1771,7 @@
     <string name="title_service">Agriculture Service</string>
     <string name="label_soll_testing">Soil Testing</string>
     <string name="label_eqipment">Equipment</string>
+    <string name="dummy_button">Dummy Button</string>
+    <string name="dummy_content">DUMMY\nCONTENT</string>
 
 </resources>
