--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -588,7 +588,7 @@
         <item>pcs</item>
     </string-array>
     <string-array name="sp_crop_income_expense_transaction">
-        <item>Select Transaction</item>
+        <item>Transaction</item>
         <item>Income</item>
         <item>Expense</item>
     </string-array>
@@ -600,7 +600,9 @@
         <item>Services</item>
         <item>General Income</item>
     </string-array>
+
     <string-array name="sp_crop_expenses_category">
+        <item>Category</item>
         <item>Fuel</item>
         <item>Utilities</item>
         <item>Fertilizer &amp; Lime</item>
@@ -616,8 +618,9 @@
         <item>Machinery/Equipments</item>
         <item>General Expenses</item>
     </string-array>
+
     <string-array name="sp_crop_income_expense_payment_mode">
-        <item>Select Mode</item>
+        <item>Payment Mode</item>
         <item>Cash</item>
         <item>Bank Deposit</item>
         <item>Credit Card</item>
@@ -628,7 +631,7 @@
 
     </string-array>
     <string-array name="sp_crop_income_expense_payment_status">
-        <item>Select Status</item>
+        <item>Payment Status</item>
         <item>Full Payment</item>
         <item>Partial Payment</item>
         <item>Pending Payment</item>
@@ -1692,7 +1695,7 @@
     <string name="label_livestockrecords">Livestock Records</string>
     <string name="label_store">Store</string>
     <string name="label_financial_records">Financial Records</string>
-    <string name="label_add_financial_records">Add Financial Records</string>
+    <string name="label_add_financial_records">Add Entry</string>
     <string name="label_livestock">Livestock</string>
     <string name="label_ask_agronomist">Ask Agronomist</string>
     <string name="title_farm_records">Farm Records</string>
@@ -1794,5 +1797,7 @@
     <string name="seeds">Seeds</string>
     <string name="fertilizer_title">FertiliZer</string>
     <string name="planting_date">Planting Date</string>
+    <string name="label_customer_supplier">Customer/Supplier</string>
+    <string name="department">Department</string>
 
 </resources>
