--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -147,6 +147,7 @@
         <item>Row Crops</item>
         <item>Others</item>
     </string-array>
+
     <string-array name="crop_field_status">
         <item> Status</item>
         <item>Active</item>
@@ -154,6 +155,7 @@
         <item>Leased</item>
         <item>Other</item>
     </string-array>
+
     <string-array name="seed_inventory_seed_type">
         <item>Seed Type</item>
         <item>Conventional</item>
@@ -162,6 +164,7 @@
         <item>Hybrid</item>
         <item>Organic</item>
     </string-array>
+
     <string-array name="crop_field_watercourse">
         <item>Select</item>
         <item>None</item>
@@ -170,12 +173,14 @@
         <item>Large (6m)</item>
         <item>Dry Ditch</item>
     </string-array>
+
     <string-array name="crops_growing_cycle">
         <item>Select Cycle</item>
         <item>Annual</item>
         <item>Perennial</item>
         <item>Biennial</item>
     </string-array>
+
     <string-array name="crops_planting_method">
         <item>Select Method</item>
         <item>Drill Sow</item>
@@ -195,12 +200,14 @@
         <item>Weed Control</item>
         <item>Other</item>
     </string-array>
+
     <string-array name="crop_notes_category">
         <item>Select Category</item>
         <item>Maintenance</item>
         <item>Repair</item>
         <item>Other</item>
     </string-array>
+
     <string-array name="crop_spray_type">
         <item>Spray Type</item>
         <item>Pesticide</item>
@@ -209,12 +216,14 @@
         <item>Fungicide</item>
         <item>Nematocide</item>
     </string-array>
+
     <string-array name="crop_fertilizer_application_method_solid">
         <item>Broadcasting</item>
         <item>Placement</item>
         <item>Band Placement</item>
         <item>Pellet Application</item>
     </string-array>
+
     <string-array name="crop_fertilizer_application_method_liquid">
         <item>Starter Solutions</item>
         <item>Foliar Application</item>
@@ -222,11 +231,13 @@
         <item>Injection into Soil</item>
         <item>Aerial Application</item>
     </string-array>
+
     <string-array name="crop_fertilizer_form">
         <item>Select Form</item>
         <item>Solid</item>
         <item>Liquid</item>
     </string-array>
+
     <string-array name="crop_spraying_weather_condition">
         <item>Select</item>
         <item>Sunny</item>
@@ -236,6 +247,7 @@
         <item>Rain</item>
         <item>Heavy Rain</item>
     </string-array>
+
     <string-array name="crop_spraying_wind_direction">
         <item>Select</item>
         <item>N</item>
@@ -247,6 +259,7 @@
         <item>E</item>
         <item>W</item>
     </string-array>
+
     <string-array name="crops_list">
         <item>Select Crop</item>
         <item>Beans</item>
@@ -256,6 +269,7 @@
         <item>Irish Potatoes</item>
         <item>Sweet Potatoes</item>
     </string-array>
+
     <string-array name="crop_machine_category">
         <item>Select</item>
         <item>Plow</item>
@@ -276,11 +290,13 @@
         <item>Engine</item>
         <item>Others</item>
     </string-array>
+
     <string-array name="sp_crop_employee_gender">
         <item>Select Gender</item>
         <item>Male</item>
         <item>Female</item>
     </string-array>
+
     <string-array name="sp_crop_employee_employment_status">
         <item>Select Status</item>
         <item>Full-Time</item>
@@ -288,6 +304,7 @@
         <item>Part-Time</item>
         <item>Terminated</item>
     </string-array>
+
     <string-array name="sp_crop_employee_per">
         <item>Select</item>
         <item>Hour</item>
@@ -295,8 +312,8 @@
         <item>Week</item>
         <item>Month</item>
         <item>Year</item>
-
     </string-array>
+
     <string-array name="sp_crop_employee_pay_type">
         <item>Select</item>
         <item>Salary</item>
@@ -304,6 +321,7 @@
         <item>Contract</item>
         <item>Salary non-exempt</item>
     </string-array>
+
     <string-array name="country_list">
         <item>Select Country</item>
         <item>Afghanistan</item>
@@ -548,11 +566,13 @@
         <item>Zambia</item>
         <item>Zimbabwe</item>
     </string-array>
+
     <string-array name="sp_crop_product_type">
         <item>Select Type</item>
         <item>Stock</item>
         <item>Service</item>
     </string-array>
+
     <string-array name="sp_crop_linked_account">
         <item>Select Account</item>
         <item>Discount</item>
@@ -568,8 +588,8 @@
         <item>Prepaid Expenses</item>
         <item>Share Capital</item>
         <item>Other </item>
-
     </string-array>
+
     <string-array name="sp_crop_product_units">
         <item>Select Unit</item>
         <item>box</item>
@@ -587,11 +607,13 @@
         <item>m</item>
         <item>pcs</item>
     </string-array>
+
     <string-array name="sp_crop_income_expense_transaction">
         <item>Transaction</item>
         <item>Income</item>
         <item>Expense</item>
     </string-array>
+
     <string-array name="sp_crop_income_category">
         <item>Crop Sales</item>
         <item>Machinery Hire</item>
@@ -628,14 +650,15 @@
         <item>Cheque</item>
         <item>Internet Banking</item>
         <item>Mobile Money</item>
-
     </string-array>
+
     <string-array name="sp_crop_income_expense_payment_status">
         <item>Payment Status</item>
         <item>Full Payment</item>
         <item>Partial Payment</item>
         <item>Pending Payment</item>
     </string-array>
+
     <string-array name="sp_crop_task_type">
         <item>Select Type</item>
         <item>Soil Analysis</item>
@@ -649,12 +672,14 @@
         <item>Prunning</item>
         <item>General</item>
     </string-array>
+
     <string-array name="sp_crop_task_status">
         <item>Select Status</item>
         <item>Pending</item>
         <item>In-Progress</item>
         <item>Finished</item>
     </string-array>
+
     <string-array name="sp_crop_task_recurrence">
         <item>Select</item>
         <item>Once</item>
@@ -663,13 +688,15 @@
         <item>Monthly</item>
         <item>Annually</item>
     </string-array>
+
     <string-array name="sp_crop_task_reminders">
         <item>Select</item>
         <item>Yes</item>
         <item>No</item>
     </string-array>
+
     <string-array name="sp_crops_season">
-        <item >Season</item>
+        <item>Season</item>
         <item>First Season</item>
         <item>Second Season</item>
     </string-array>
@@ -681,11 +708,13 @@
         <item>Early</item>
         <item>Late</item>
     </string-array>
+
     <string-array name="sp_crop_scouting_infested">
         <item>Select</item>
         <item>Yes</item>
         <item>No</item>
     </string-array>
+
     <string-array name="sp_crop_scouting_infestation_type">
         <item>Select</item>
         <item>Disease</item>
@@ -695,7 +724,7 @@
         <item>Weed</item>
     </string-array>
 
-    <string-array name="sp_crops_fields" >
+    <string-array name="sp_crops_fields">
         <item>Field</item>
 
     </string-array>
@@ -1799,5 +1828,21 @@
     <string name="planting_date">Planting Date</string>
     <string name="label_customer_supplier">Customer/Supplier</string>
     <string name="department">Department</string>
+
+    <string-array name="crop_add_produce">
+        <item> Crop</item>
+        <item>Active</item>
+        <item>Fallow</item>
+        <item>Leased</item>
+        <item>Other</item>
+    </string-array>
+
+    <string-array name="crop_quantity_unit">
+        <item> Unit</item>
+        <item>Kg</item>
+        <item>Boxes</item>
+        <item>Litres</item>
+        <item>Tones</item>
+    </string-array>
 
 </resources>
