Rename and  Retrofit fixes in update User

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1845,4 +1845,5 @@
         <item>Tones</item>
     </string-array>
 
+    <string name="unexpected_response"> Unexpected Server Response </string>
 </resources>
