--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,6 @@
 <resources>
-    <string name="app_name">Crop Manager</string>
+    <string name="app_name">eMaisha</string>
     <string name="action_settings">Settings</string>
-    <string name="title_activity_dashboard">eMaisha</string>
     <string name="label_fields">Fields</string>
     <string name="label_crops">Crops</string>
     <string name="units">Units</string>
