--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1660,4 +1660,5 @@
     <string name="per_week">per week</string>
     <string name="per_year">per year</string>
     <string name="label_building_investiment">Buildings</string>
+    <string name="label_report_results">Report Results</string>
 </resources>
